--- a/primeira-bateria/index.html
+++ b/primeira-bateria/index.html
@@ -14,7 +14,28 @@
 </head>
 
 <body>
-    <!--Escreva a partir daqui-->
+    <aside>
+        <div class="top-nav">
+            <span class="nav-span">HOME</span>
+            <span class="nav-span">MENU</span>
+            <span class="nav-span">LOGIN</span>
+            <span class="nav-span">ALEXA</span>
+        </div>
+
+        <span class="nav-footer">SAIR</span>
+    </aside>
+
+    <main>
+        <span class="top-main">MEMORIAL ALEXA</span>
+        <h1>PRESS F TO PAY RESPECTS</h1>
+
+        <div class="main-div">
+            <img src="./alexa.png" alt="Alexa" class="img">
+            <button class="f">PRESS F</button>
+            
+        </div>
+
+    </main>
 </body>
 
 </html>
