Quem coloca 2 cores no mesmo botão é vacilão :poop:

--- a/segunda-bateria/index.html
+++ b/segunda-bateria/index.html
@@ -14,7 +14,39 @@
 </head>
 
 <body>
-    <!--Escreva a partir daqui-->
+    <div class="red-ball"></div>
+    <div class="blue-ball"></div>
+
+    <main>
+        <nav>
+            <span class="text-red">HOME</span>
+            <span>
+                <span class="text-red">ME</span>
+                <span class="text-blue">NU</span>
+            </span>
+            <span class="text-blue">LOGIN</span>
+        </nav>
+
+        <div class="as">
+            <h1 class="heading">SAIR DA MATRIX</h1>
+            <img src="./logo.png" alt="Logo">
+            <h1 class="heading">FICAR NA MATRIX</h1>
+        </div>
+
+
+        <footer>
+            <div>
+                <button class="red-btn">Pílula Vermelha</button>
+                <button class="blue-btn">Pílula Azul</button>
+            </div>
+<button class="btn">
+
+            <span class="text-red">VER PARTICI</span>
+                <span class="text-blue">PANTES</span>
+            </button>
+        </footer>
+    </main>
+    
 </body>
 
 </html>
